Fixed "Title jumps to the next line, out of the toolbar #508"

--- a/packages/mdc-toolbar/mdc-toolbar.scss
+++ b/packages/mdc-toolbar/mdc-toolbar.scss
@@ -59,6 +59,7 @@ $mdc-toolbar-mobile-breakpoint: 599px;
     align-items: flex-start;
     justify-content: center;
     z-index: 1;
+    overflow: hidden;
 
     &--align-start {
       justify-content: flex-start;
@@ -74,7 +75,9 @@ $mdc-toolbar-mobile-breakpoint: 599px;
 
   &__title {
     @include mdc-typography(title);
-
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     margin: 0;
     line-height: 1.5rem;
   }
